# solcore6

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
solcore/: constants.py  material.py  parameter.py
solcore/future/: material.py
solcore/future/parameter_sources/: calculable_parameters.py  simple_parameters.py  sopra_nk.py
solcore/material_data/: adachi1987_parameters.json
solcore/parameter_sources/: __init__.py  builtin_nk.py  calculable_parameters.py  mobility_parameters.py  refractiveindex_info_nk.py  simple_parameters.py  sopra_nk.py
solcore/parameter_sources/tools/: critical_point_picker.py  dboperations.py
tests/: conftest.py  test_material.py  test_parameter.py
tests/future/: conftest.py  test_material.py
tests/future/test_integration/: test_exceptions.py
tests/future/test_parameter_sources/: test_calculable_parameters.py  test_refractiveindex_info_nk.py  test_sopra_nk.py
tests/test_parameter_sources/: source_testing_suites.py  test_builtin_nk.py  test_calculable_parameters.py  test_mobility_parameters.py  test_simple_parameters.py
