[bumpversion]
current_version = 6.0.0
commit = True
tag = True

[metadata]
description-file = README.md

[flake8]
max-line-length = 88
extend-ignore =
	E203,

[aliases]
test = pytest

[tool:pytest]
addopts = --flake8 --mypy --cov=solcore --cov-report=html:htmlcov -p no:warnings

[bumpversion:file:solcore/__init__.py]
